--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.3.1",
     "hammerjs": "^2.0.8",
+    "ng2-search-filter": "^0.4.7",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
