--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@zxing/ngx-scanner": "^1.2.0",
     "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.5.4",
     "firebase": "^5.3.1",
     "hammerjs": "^2.0.8",
     "ng2-search-filter": "^0.4.7",
-    "rxjs": "^6.0.0",
+    "ngx-kjua": "^1.2.0",
+    "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
